# mpc-over-signal

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile.linux  README.md  build.rs  signal-server.pem
demo/: Cargo.toml  README.md
demo/src/: cli.rs  main.rs
mpc-over-signal/: Cargo.toml  README.md  build.rs
mpc-over-signal/examples/: login.rs  ping-pong.rs
mpc-over-signal/protos/: SignalService.proto  SubProtocol.proto
mpc-over-signal/src/: lib.rs  signal_client.rs
mpc-over-signal/src/actors/: pending_messages.rs
mpc-over-signal/src/device/: creds.rs  mod.rs
mpc-over-signal/src/helpers/: mod.rs
mpc-over-signal/src/webapi/: create_device.rs  link_device.rs  mod.rs  receive_messages.rs  whoami.rs
mpc-over-signal/src/webapi/device_keys/: get.rs  types.rs
mpc-over-signal/src/webapi/link_device/: provision_cipher.rs
protos/: DeviceMessages.proto
src/: cli.rs  device.rs  device_keys.rs  main.rs
src/actors/: mod.rs  transport_worker.rs
src/device/: creds.rs  device_store.rs  keys.rs  mod.rs  stores.rs
src/helpers/: fmt.rs  libsignal_serializable.rs  mod.rs  serde.rs
src/webapi/: client.rs  create_device.rs  link_device.rs  mod.rs  receive_messages.rs  send_message.rs  send_messages.rs  sub_protocol.rs  submit_device_keys.rs  whoami.rs
src/webapi/device_keys/: get.rs  mod.rs  submit.rs  types.rs
