[package]
name = "mpc-over-signal"
version = "0.1.0"
authors = ["Denis Varlakov <dsurv@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
awc = { version = "2", features = ["rustls"] }
actix-http = { version = "2.2", features = ["rustls"] }
anyhow = "1"
prost = "0.7"
actix-rt = "1"
futures = "0.3"
rand = "0.7"
urlencoding = "1.1"
base64 = "0.13"
rustls = "0.18"
qr2term = "0.2"
derivative = "2.2"

hmac = "0.10"
sha2 = "0.9"
block-modes = "0.7"
aes = "0.6"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.libsignal-protocol]
git = "https://github.com/signalapp/libsignal-client"

[build-dependencies]
prost-build = "0.7"
