[package]
name = "demo"
version = "0.1.0"
authors = ["Denis <dsurv@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bls = { git = "https://github.com/ZenGo-X/multi-party-bls", branch = "main" }
curv = { git = "https://github.com/ZenGo-X/curv", tag = "v0.6.1"}
round-based = "0.1.1"
mpc-over-signal = { path = "../mpc-over-signal" }

actix = "0.11.0-beta.2"
awc = { version = "3.0.0-beta.2", features = ["rustls"] }
tokio = { version = "1", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = "0.2"
futures = "0.3"
rustls = "0.19"

rand = "0.7"

anyhow = "1"
structopt = "0.3"

qr2term = "0.2"

base64 = "0.13"
hex = "0.4"
serde_json = "1"