[package]
name = "mpc-over-signal"
version = "0.1.0"
authors = ["Denis Varlakov <dsurv@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.11.0-beta.2"
actix-codec = "0.4.0-beta.1"
actix-rt = "2"
actix-http = { version = "3.0.0-beta.2", features = ["rustls"] }
awc = { version = "3.0.0-beta.2", features = ["rustls"] }
futures = "0.3"
tokio = { version = "1", features = ["fs", "io-util", "rt"] }
tokio-util = "^0.6"
tracing = "0.1"

anyhow = "1"
prost = "0.7"
urlencoding = "1.1"
base64 = "0.13"
hex = "0.4"
rustls = "0.19"

async-trait = "0.1"
derivative = "2.2"
thiserror = "1"

aes = "0.6"
block-modes = "0.7"
hmac = "0.10"
sha2 = "0.9"
rand = "0.7"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

round-based = "0.1.1"

[dependencies.libsignal-protocol]
git = "https://github.com/signalapp/libsignal-client"

[build-dependencies]
prost-build = "0.7"

[dev-dependencies]
structopt = "0.3"
qr2term = "0.2"
tracing-subscriber = "0.2"
tokio = { version = "1", features = ["fs", "io-util", "rt", "macros", "signal"] }